--- a/OVA.EasyLive/Pages/PageAuthorisation.xaml
+++ b/OVA.EasyLive/Pages/PageAuthorisation.xaml
@@ -8,7 +8,8 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="PageAuthorisation">
 
-    <StackPanel HorizontalAlignment="Center"
+    <StackPanel x:Name="spAuthorisation" 
+                HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 Background="Gray">
         <TextBlock Text="Admin Login"
@@ -25,23 +26,25 @@
                    Margin="5"
                    TextAlignment="Center"
                    Visibility="Hidden"/>
-
+        
         <StackPanel Orientation="Horizontal">
             <Label Width="80" Content="Login ID"
                    VerticalAlignment="Center"></Label>
-            <TextBox Width="150" Margin="10"/>
+            <TextBox Width="150" Margin="10" 
+                     Text="{Binding Path=email}"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal">
             <Label Width="80" Content="Password"
                    VerticalAlignment="Center"></Label>
-            <PasswordBox Width="150" Margin="10"/>
+            <PasswordBox Width="150" Margin="10"
+                         x:Name="pbxPassword"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal">
             <Label Width="80"/>
-            <Button Content="Submit" Margin="10 5" Padding="7 0"/>
-            <Button Content="Back" Margin="10 5" Padding="7 0"/>
+            <Button x:Name="btnSubmit" Click="BtnSubmit_Click" Content="Submit" Margin="10 5" Padding="7 0"/>
+            <Button x:Name="btnBack" Click="BtnBack_Click" Content="Back" Margin="10 5" Padding="7 0"/>
         </StackPanel>
 
     </StackPanel>
