--- a/OVA.EasyLive/Pages/PageWelcome.xaml
+++ b/OVA.EasyLive/Pages/PageWelcome.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="OVA.EasyLive.Pages.PageWellcome"
+﻿<Page x:Class="OVA.EasyLive.Pages.PageWelcome"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -9,6 +9,10 @@
       Title="PageWellcome">
 
     <Grid>
-        <TextBlock x:Name="tbWelcomeMess"/>
+        <TextBlock x:Name="tbWelcomeMess"
+                   FontSize="35"
+                   Foreground="Black"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"/>
     </Grid>
 </Page>
