--- a/OVA.EasyLive/MainWindow.xaml
+++ b/OVA.EasyLive/MainWindow.xaml
@@ -29,7 +29,7 @@
 
             <StackPanel Height="30" DockPanel.Dock="Bottom"
                         Background="Lime">
-                <Label Height="30" Content="Copyright Reserved"
+                <Label Height="30" Content="© Copyright Reserved"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"
                        FontSize="16"
@@ -38,7 +38,9 @@
                 
 
             </StackPanel>
-            <Frame x:Name="MainFrame" Background="#FF747474" Height="350" VerticalAlignment="Bottom"></Frame>
+            <Frame x:Name="MainFrame" Background="#FF747474" 
+                   Height="350" VerticalAlignment="Bottom"
+                   NavigationUIVisibility="Hidden"></Frame>
 
         </DockPanel>
         
