--- a/OVA.EasyLive/Pages/PageAuthorisation.xaml
+++ b/OVA.EasyLive/Pages/PageAuthorisation.xaml
@@ -32,7 +32,7 @@
                    VerticalAlignment="Center"></Label>
             <TextBox Width="150" Margin="10" 
                      x:Name="tbxLogin"
-                     Text="silverapple98@example.com"/>
+                     Text="prettysnake76@example.com"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal">
@@ -40,7 +40,7 @@
                    VerticalAlignment="Center"></Label>
             <PasswordBox Width="150" Margin="10"
                          x:Name="pbxPassword"
-                         Password="BxCtbdXsJOE"/>
+                         Password="WnPLULRf9_o"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal">
