--- a/OVA.EasyLive/Pages/PageAuthorisation.xaml
+++ b/OVA.EasyLive/Pages/PageAuthorisation.xaml
@@ -13,11 +13,11 @@
                 VerticalAlignment="Center"
                 Background="Gray">
         <TextBlock Text="Admin Login"
-               HorizontalAlignment="Stretch"
-               TextAlignment="Center"
-               FontWeight="Bold"
-               Foreground="White"
-               Background="Lime"/>
+                   HorizontalAlignment="Stretch"
+                   TextAlignment="Center"
+                   FontWeight="Bold"
+                   Foreground="White"
+                   Background="Lime"/>
 
         <TextBlock x:Name="tbErrMes" 
                    Text="Invalid LoginID/Password"
@@ -32,7 +32,8 @@
                    VerticalAlignment="Center"></Label>
             <TextBox Width="150" Margin="10" 
                      x:Name="tbxLogin"
-                     Text="prettysnake76@example.com"/>
+                     Text="prettysnake76@example.com"
+                     GotFocus="AuthorisationField_GotFocus"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal">
@@ -40,7 +41,8 @@
                    VerticalAlignment="Center"></Label>
             <PasswordBox Width="150" Margin="10"
                          x:Name="pbxPassword"
-                         Password="WnPLULRf9_o"/>
+                         Password="WnPLULRf9_o"
+                         GotFocus="AuthorisationField_GotFocus"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal">
