--- a/OVA.EasyLive/Pages/PageAllEmployees.xaml
+++ b/OVA.EasyLive/Pages/PageAllEmployees.xaml
@@ -70,6 +70,9 @@
                     <MenuItem Header="Show Info"
                               x:Name="miShowInfo"
                               Click="MiShowInfo_Click"/>
+                    <MenuItem Header="VacationForm"
+                              x:Name="miVacationForm"
+                              Click="MiVacationForm_Click"/>
                 </ContextMenu>
             </ListView.ContextMenu>
             <ListView.View>
