--- a/OVA.EasyLive/WindowEmployeeInfo.xaml
+++ b/OVA.EasyLive/WindowEmployeeInfo.xaml
@@ -58,6 +58,9 @@
                     <MenuItem Header="Change"
                               x:Name="miChange"
                               Click="MiChange_Click"/>
+                    <MenuItem Header="Сформировать приказ"
+                              x:Name="miCreateDoc_1"
+                              Click="MiCreateDoc_1_Click"/>
                 </ContextMenu>
             </ListView.ContextMenu>
             <ListView.View>
